--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -6,24 +6,20 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      max-parallel: 4
       matrix:
         os: [ubuntu-20.04, windows-2019]
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.10", "3.11"]
         config:
-          - torch-version: "1.13.1"
+          - torch-version: "2.0.1"
             cuda-version: "11.7.1"
             arch_list: "3.7;3.5+PTX;5.3;5.0;5.2+PTX;6.0;6.1+PTX;7.0+PTX;7.5+PTX;8.0;8.6+PTX"
-            torch-command: pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 --extra-index-url https://download.pytorch.org/whl/cu117
+            torch-command: pip install torch==2.0.1+cu117 torchvision==0.15.2+cu117 --index-url https://download.pytorch.org/whl/cu117
 
-          - torch-version: "2.0.0"
-            cuda-version: "11.7.1"
-            arch_list: "3.7;3.5+PTX;5.3;5.0;5.2+PTX;6.0;6.1+PTX;7.0+PTX;7.5+PTX;8.0;8.6+PTX"
-            torch-command: pip install torch==2.0.0+cu117 torchvision==0.15.1+cu117 --index-url https://download.pytorch.org/whl/cu117
-
-          - torch-version: "2.0.0"
+          - torch-version: "2.0.1"
             cuda-version: "11.8.0"
             arch_list: "3.7;3.5+PTX;5.3;5.0;5.2+PTX;6.0;6.1+PTX;7.0+PTX;7.5+PTX;8.0;8.6+PTX;8.9+PTX;9.0+PTX"
-            torch-command: pip install torch==2.0.0+cu118 torchvision==0.15.1+cu118 --index-url https://download.pytorch.org/whl/cu118
+            torch-command: pip install torch==2.0.1+cu118 torchvision==0.15.2+cu118 --index-url https://download.pytorch.org/whl/cu118
 
     steps:
       - name: Checkout repository
