--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -35,11 +35,15 @@ jobs:
           pip install -U setuptools wheel build ninja
           ${{ matrix.config.torch-command }}
 
+      - name: Pip cache purge
+        run: pip cache purge
+
       - name: Set up cudatoolkit ${{ matrix.config.cuda-version }}
         uses: Jimver/cuda-toolkit@v0.2.11
         id: cuda-toolkit
         with:
           cuda: ${{ matrix.config.cuda-version }}
+          method: network
           use-github-cache: false
 
       - run: echo "Installed cuda version is → ${{ steps.cuda-toolkit.outputs.cuda }}"
