--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -5,6 +5,9 @@ on: [workflow_dispatch]
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash -el {0}
     strategy:
       max-parallel: 4
       matrix:
@@ -13,45 +16,45 @@ jobs:
         config:
           - torch-version: "2.0.1"
             cuda-version: "11.7.1"
+            cuda-short: "11.7"
             arch_list: "3.7;3.5+PTX;5.3;5.0;5.2+PTX;6.0;6.1+PTX;7.0+PTX;7.5+PTX;8.0;8.6+PTX"
-            torch-command: pip install torch==2.0.1+cu117 torchvision==0.15.2+cu117 --index-url https://download.pytorch.org/whl/cu117
 
           - torch-version: "2.0.1"
             cuda-version: "11.8.0"
+            cuda-short: "11.8"
             arch_list: "3.7;3.5+PTX;5.3;5.0;5.2+PTX;6.0;6.1+PTX;7.0+PTX;7.5+PTX;8.0;8.6+PTX;8.9+PTX;9.0+PTX"
-            torch-command: pip install torch==2.0.1+cu118 torchvision==0.15.2+cu118 --index-url https://download.pytorch.org/whl/cu118
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - name: Set up conda
+        uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: ${{ matrix.python-version }}
+          miniforge-variant: Mambaforge
+          use-mamba: true
 
-      - name: Install dependencies
+      - name: Install pytorch ${{ matrix.config.torch-version }}-cuda${{ matrix.config.cuda-short }}
         run: |
-          pip install -U setuptools wheel build ninja
-          ${{ matrix.config.torch-command }}
+          mamba install -y -c pytorch -c nvidia pytorch torchvision pytorch-cuda=${{ matrix.config.cuda-short }}
 
-      - name: Pip cache purge
-        run: pip cache purge
+      - name: Install build dependencies
+        run: mamba install -y setuptools wheel build ninja
 
-      - name: Set up cudatoolkit ${{ matrix.config.cuda-version }}
-        uses: Jimver/cuda-toolkit@v0.2.11
-        id: cuda-toolkit
-        with:
-          cuda: ${{ matrix.config.cuda-version }}
-          method: network
-          use-github-cache: false
+      - name: conda clean cache
+        run: conda clean -a -y
 
-      - run: echo "Installed cuda version is → ${{ steps.cuda-toolkit.outputs.cuda }}"
-      - run: echo "Cuda install location → ${{ steps.cuda-toolkit.outputs.CUDA_PATH }}"
+      - name: Install cuda ${{ matrix.config.cuda-version }}
+        run: mamba install -y -c "nvidia/label/cuda-${{ matrix.config.cuda-version }}" cuda
+
+      - name: echo CONDA_PREFIX
+        id: conda-preifx
+        run: echo "CONDA_PREFIX=${CONDA_PREFIX}" >> "$GITHUB_OUTPUT"
 
       - name: Build wheel
         env:
-          CUDA_HOME: ${{ steps.cuda-toolkit.outputs.CUDA_PATH }}
+          CUDA_HOME: ${{ steps.conda-preifx.outputs.CONDA_PREFIX }}
           TORCH_CUDA_ARCH_LIST: ${{ matrix.config.arch_list }}
         run: |
           python -m build --no-isolation --wheel
