--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -11,19 +11,14 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         python-version: ["3.9", "3.10", "3.11"]
         config:
-          - torch-version: "2.0.1"
-            cuda-version: "11.7.1"
-            arch_list: "3.7;3.5+PTX;5.3;5.0;5.2+PTX;6.0;6.1+PTX;7.0+PTX;7.5+PTX;8.0;8.6+PTX"
-            torch-command: pip install torch==2.0.1+cu117 torchvision==0.15.2+cu117 --index-url https://download.pytorch.org/whl/cu117
-
-          - torch-version: "2.0.1"
-            cuda-version: "11.8.0"
-            arch_list: "3.7;3.5+PTX;5.3;5.0;5.2+PTX;6.0;6.1+PTX;7.0+PTX;7.5+PTX;8.0;8.6+PTX;8.9+PTX;9.0+PTX"
-            torch-command: pip install torch==2.0.1+cu118 torchvision==0.15.2+cu118 --index-url https://download.pytorch.org/whl/cu118
+          - torch-version: "2.1.0"
+            cuda-version: "12.1.0"
+            arch_list: "7.5+PTX;8.0;8.6+PTX;8.7;8.9+PTX;9.0+PTX"
+            torch-command: pip install torch==2.1.0+cu121 torchvision==0.16.0+cu121 --index-url https://download.pytorch.org/whl/test/cu121
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
