--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -9,32 +9,31 @@ jobs:
       max-parallel: 4
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         config:
-          - torch-version: "2.1.0"
+          - torch-version: "2.2.2"
             cuda-version: "12.1.0"
             arch_list: "7.5+PTX;8.0;8.6+PTX;8.7;8.9+PTX;9.0+PTX"
-            torch-command: pip install torch==2.1.0+cu121 torchvision==0.16.0+cu121 --index-url https://download.pytorch.org/whl/test/cu121
+            torch-command: uv pip install --system --no-cache torch==2.2.2+cu121 torchvision==0.17.2+cu121 --index-url https://download.pytorch.org/whl/test/cu121
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
+      - uses: yezz123/setup-uv@v4
+
       - name: Install dependencies
         run: |
-          pip install -U setuptools wheel build ninja
+          uv pip install --system --no-cache setuptools wheel build ninja
           ${{ matrix.config.torch-command }}
 
-      - name: Pip cache purge
-        run: pip cache purge
-
       - name: Set up cudatoolkit ${{ matrix.config.cuda-version }}
-        uses: Jimver/cuda-toolkit@v0.2.11
+        uses: Jimver/cuda-toolkit@master
         id: cuda-toolkit
         with:
           cuda: ${{ matrix.config.cuda-version }}
